--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {deps,
  [{ecpool, {git, "https://github.com/emqx/ecpool", {tag, "v0.4.2"}}},
   {emqx_passwd, {git, "https://github.com/emqx/emqx-passwd", {tag, "v1.1.1"}}},
-  {mysql, {git, "https://github.com/emqx/mysql-otp", {tag, "1.6.1"}}}
+  {mysql, {git, "https://github.com/emqx/ecql", {tag, "v0.4.2"}}}
  ]}.
 
 {edoc_opts, [{preprocess, true}]}.
