--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {deps,
- [{ecpool, {git, "https://github.com/emqx/ecpool", {tag, "v0.4.2"}}},
+ [{mysql, {git, "https://github.com/emqx/mysql-otp", {tag, "1.6.1"}}},
+  {ecpool, {git, "https://github.com/emqx/ecpool", {tag, "v0.4.2"}}},
   {emqx_passwd, {git, "https://github.com/emqx/emqx-passwd", {tag, "v1.1.1"}}},
   {ecql, {git, "https://github.com/emqx/ecql", {tag, "v0.4.2"}}}
  ]}.
@@ -23,3 +24,13 @@
 {cover_enabled, true}.
 {cover_opts, [verbose]}.
 {cover_export_enabled, true}.
+
+{profiles,
+ [{test,
+   [{deps,
+     [{emqx_ct_helpers, {git, "https://github.com/emqx/emqx-ct-helpers", {tag, "1.2.2"}}},
+      {emqtt, {git, "https://github.com/emqx/emqtt", {tag, "1.2.0"}}}
+     ]},
+    {erl_opts, [debug_info]}
+   ]}
+ ]}.
